--- a/views/users.erb
+++ b/views/users.erb
@@ -49,6 +49,25 @@
       </div>
       <table>
         <caption>Users streaks</caption>
+        <% user.streaks.each do |streak| %>
+          <tr>
+            <td>Start:</td>
+            <td><%= streak.start.strftime("%m/%d/%Y at %I:%M%p") %></td>
+            <td>End:</td>
+            <td>
+              <%= 
+                endTime = (streak.end) ? streak.end : Time.now
+                endTime.strftime("%m/%d/%Y at %I:%M%p")
+               %>
+            </td>
+            <td>Days:</td>
+            <td><%=
+              endTime = (streak.end) ? streak.end : Time.now
+              days = (endTime.to_date - streak.start.to_date).round
+              "#{days} days"
+            %></td>
+          </tr>
+        <% end %>
       </table>
     </article>  
   <% end %>  
